# serde-hkx

./: .gitignore  Cargo.toml  LICENSE.md  LICENSES.toml  README.md  crates.js  cspell.jsonc  deny.toml  help.html  search-index.js  settings.html  src-files.js
crates/class_generator/: Cargo.toml  readme.md
crates/class_generator/examples/: main.rs  output.rs
crates/class_generator/src/: error.rs  gen_index.rs  get_class_map.rs  lib.rs
crates/class_generator/src/cpp_info/: class.rs  enum_item.rs  flag_values.rs  member.rs  mod.rs  type_kind.rs
crates/class_generator/src/rust_gen/: enums.rs  mod.rs  structure.rs  to_rust_token.rs
crates/class_generator/src/type_table_gen/: mod.rs
crates/cli/: Cargo.toml  build.rs  readme.md
crates/cli/assets/: icon.drawio
crates/cli/src/: color.rs  encode_string.rs  error.rs  logger.rs  main.rs
crates/cli/src/args/: color.rs  convert.rs  diff.rs  dump.rs  mod.rs  progress_handler.rs  tree.rs  verify.rs
crates/cli/src/cli/: commands.rs  convert.rs  diff.rs  dump.rs  help.rs  mod.rs  tree.rs
crates/havok_class/: Cargo.toml
crates/havok_class/src/: lib.rs
crates/havok_classes/: Cargo.toml
crates/havok_classes/src/: generated.rs  lib.rs
crates/havok_serde/: Cargo.toml
crates/havok_serde/src/: error.rs  lib.rs  test.rs
crates/havok_serde/src/de/: bytes.rs  impls.rs  lazy_init_array.rs  mod.rs  seed.rs  size_hint.rs
crates/havok_serde/src/private/: mod.rs
crates/havok_serde/src/ser/: bytes.rs  impls.rs  mod.rs  xml.rs
crates/havok_serde/tests/: flatten.rs  test.rs
crates/havok_serde_derive/: Cargo.toml
crates/havok_serde_derive/src/: lib.rs  ser.rs
crates/havok_types/: Cargo.toml  readme.md
crates/havok_types/src/: cstring.rs  error.rs  half.rs  lib.rs  name.rs  parse_int.rs  pointer.rs  primitive.rs  signature.rs  str_parser.rs  string_ptr.rs  ulong.rs  variant.rs
crates/havok_types/src/macros/: serde.rs
crates/havok_types/src/math/: matrix3.rs  matrix4.rs  mod.rs  qs_transform.rs  quaternion.rs  rotation.rs  transform.rs  vector3.rs  vector4.rs
crates/havok_types_derive/: Cargo.toml
crates/havok_types_derive/src/: lib.rs
crates/havok_types_derive/src/proc_macros/: Cargo.toml  mod.rs  readme.md
crates/inheritance_tree_gen/: Cargo.toml
crates/inheritance_tree_gen/src/: lib.rs
crates/serde_hkx_features/: .gitignore  Cargo.toml  build.rs  readme.md
crates/serde_hkx_features/cpp_niflib/: compile_flags.txt  de.cc  wrapper.cc  wrapper.h  wrapper_write.cc  wrapper_write.h
crates/serde_hkx_features/src/: alt_map.rs  convert.rs  diff.rs  dump.rs  error.rs  fs.rs  id_maker.rs  json_schema_gen.rs  lib.rs  progress.rs  read_ext.rs  serde.rs  toml_err_avoider.rs  tree.rs  types_wrapper.rs  verify.rs
crates/serde_hkx_features/src/convert/: hkx_checker.rs  mod.rs  rayon.rs  tokio.rs
crates/serde_hkx_features/src/kf/: mod.rs
crates/serde_hkx_features/src/serde/: de.rs  mod.rs  ser.rs
crates/serde_hkx_features/src/serde_extra/: de.rs  error.rs  ser.rs
crates/serde_hkx_ffi/: .gitignore  Cargo.toml
crates/serde_hkx_ffi/.cargo/: config.toml
crates/serde_hkx_ffi/src/: error.rs  lib.rs
crates/serde_hkx_ffi/test/: Makefile  main.c  serde_hkx_ffi.h
crates/snafu_location_derive/: Cargo.toml
crates/snafu_location_derive/src/: lib.rs
crates/tracing_easy/: Cargo.toml  readme.md
crates/tracing_easy/src/: builder.rs  lib.rs
crates/winnow_ext/: Cargo.toml
crates/winnow_ext/src/: combinator.rs  lib.rs  readable_error.rs  space.rs
serde_hkx/: Cargo.toml  all.html  index.html  macro.align!.html  macro.align.html  sidebar-items.js  trait.HavokSort.html
serde_hkx/bytes/: index.html  sidebar-items.js
serde_hkx/bytes/align/: index.html
serde_hkx/bytes/de/: fn.from_bytes.html  fn.from_bytes_with_opt.html  fn.from_partial_bytes.html  fn.from_partial_bytes_with_opt.html  index.html  sidebar-items.js  struct.BytesDeserializer.html
serde_hkx/bytes/hexdump/: fn.to_bytes.html  fn.to_hexdump_pos.html  fn.to_string.html  index.html  sidebar-items.js
serde_hkx/bytes/ser/: fn.to_bytes.html  fn.to_bytes_with_opt.html  index.html  sidebar-items.js  struct.ByteSerializer.html
serde_hkx/bytes/serde/: index.html  sidebar-items.js
serde_hkx/errors/: enum.SerdeHkxError.html  index.html  sidebar-items.js
serde_hkx/errors/de/: enum.Error.html  index.html  type.Result.html
serde_hkx/errors/readable/: index.html  sidebar-items.js  struct.ReadableError.html
serde_hkx/errors/ser/: enum.Error.html  index.html  sidebar-items.js  struct.InvalidEndianSnafu.html  struct.MessageSnafu.html  struct.MissingClassInClassnamesSectionSnafu.html  struct.MissingGlobalFixupClassSnafu.html  struct.NotFoundPointedPositionSnafu.html  struct.OverflowSubtractAbsSnafu.html  struct.UnexpectedCyclicSortSnafu.html  struct.UnsupportedPtrSizeSnafu.html  type.Result.html
serde_hkx/prelude/: index.html
serde_hkx/sort/: trait.HavokSort.html
serde_hkx/src/: cursor_ext.rs  de_error.rs  error.rs  lib.rs  mocks.rs  prelude.rs  sort.rs  tree.rs
serde_hkx/src/bytes/: align.rs  hexdump.rs  mod.rs
serde_hkx/src/common/: mod.rs
serde_hkx/src/cursor_ext/: align.rs  havok_write.rs  mod.rs
serde_hkx/src/de/: mod.rs
serde_hkx/src/errors/: de.rs  mod.rs  readable.rs  ser.rs
serde_hkx/src/mocks/: enums.rs  flags.rs  mod.rs
serde_hkx/src/sections/: fixups.rs  header.rs  mod.rs
serde_hkx/src/ser/: bytes.rs  xml.rs
serde_hkx/src/tests/: mermaid.rs  mocks.rs  mod.rs  parse_skyrim.rs  re_convert.rs  verify.rs
serde_hkx/src/trait_impls/: classnames_writer.rs  local_fixups_writer.rs
serde_hkx/src/xml/: ser.rs
serde_hkx/tests/: defaultmale.xml  mermaid.rs  parse_skyrim.rs  readme.md
serde_hkx/tree/: index.html  sidebar-items.js  trait.HavokTree.html
serde_hkx/xml/: index.html  sidebar-items.js
serde_hkx/xml/de/: fn.from_partial_str.html  fn.from_partial_str_with_opt.html  fn.from_str.html  fn.from_str_peek.html  fn.from_str_with_opt.html  index.html  sidebar-items.js  struct.XmlDeserializer.html
serde_hkx/xml/ser/: fn.to_string.html  fn.to_string_with_opt.html  index.html  sidebar-items.js  struct.XmlSerializer.html
(+23348 files in other folders)
