[package]
name = "serde_hkx"
description.workspace = true
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
annotate-snippets = "0.11.5"                         # Error reporting display
byteorder = "1.5.0"                                  # Care Endianness
educe = { workspace = true }                         # Custom derive Trait with partially
html-escape = "0.2.13"                               # Use XML escaping
indexmap = { workspace = true }                      # bytes info is ordered
snafu = { workspace = true }                         # Define all error patterns(with backtrace)
static_assertions = { workspace = true }             # Header size assertion
tracing = { workspace = true, optional = true }      # Log trace
winnow = { version = "0.6.26", features = ["simd"] } # Parser combinator

# workspace members
havok_serde = { workspace = true, features = ["indexmap"] }
havok_types = { workspace = true }


[dev-dependencies]
bitflags = { workspace = true }          # To generate flags type
num-derive = { workspace = true }        # enum to number(mock)
num-traits = { workspace = true }        # enum to number(mock)
pretty_assertions = { workspace = true } # To make diffs color and easy to read on test
quick_tracing = { workspace = true }
similar = { workspace = true }           # Create diff
tracing = { workspace = true }
zerocopy = { version = "0.8.24" }        # To(As)Bytes

# workspace members
havok_classes = { workspace = true, features = ["ignore_duplicates"] }


[features]
default = ["tracing"] # For debug

# Use tracing logging.(We may need `tracing-subscriber` crate too.)
tracing = ["dep:tracing"]


[lints]
workspace = true
