[package]
name = "class_generator"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"                                                # To generate flags type
convert_case = "0.6"                                            # Case Changer
derive-new = "0.6"
havok_types = { path = "../havok_types", features = ["serde"] }
havok_types_derive = { path = "../havok_types_derive" }
indexmap = "2.2"                                                # To cache class
jwalk = { version = "0.8" }                                     # To enumarate json class files
nom = "7.1.3"                                                   # Fast parser compibnator
num-derive = "0.4"
num-traits = "0.2"
parse-display = "0.9.0"                                         # Derive Display
parse_int = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }              # Implement (De)Serializer
serde_json = { version = "1.0.116" }                            # To read and write Json files
serde_with = "3.8.1"                                            # Serde utility
snafu_location_derive = { path = "../snafu_location_derive" }
snafu = "0.8.2"                                                 # Define all error patterns(with backtrace)
topo_sort = "0.4.0"                                             # Necessary to generate code in order of class dependencies.
tracing = "0.1"                                                 # Logger

[dev-dependencies]
pretty_assertions = "1.4" # To make diffs color and easy to read on test
