[package]
name = "class_generator"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { workspace = true }                     # To generate flags type
derive-new = "0.6"
indexmap = { workspace = true }
jwalk = { workspace = true }                        # To enumarate json class files
num-derive = { workspace = true }                   # TypeKind extension
num-traits = { workspace = true }                   # TypeKind extension
parse-display = { workspace = true }                # Derive Display
serde = { workspace = true, features = ["derive"] } # Implement (De)Serializer
serde_json = { workspace = true }                   # To read and write Json files
serde_with = { workspace = true }                   # Serde utility
snafu = { workspace = true }                        # Define all error patterns(with backtrace)
tracing = { workspace = true }                      # Logger

prettyplease = "0.2.20"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "extra-traits",
  "clone-impls",
  "derive",
  "parsing",
  "printing",
] }

# workspace members
havok_types = { workspace = true, features = ["serde"] }
havok_types_derive = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true } # To make diffs color and easy to read on test
quick_tracing = { workspace = true }     # quick tracing subscriber
