[package]
name = "cli_converter"
authors.workspace = true
version.workspace = true
description = "Havok Behavior (De)Serialization CLI(for ver. hk_2010.2.0-r1)"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "hkxc"
path = "./src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] } # For CLI
clap_complete_command = "0.6.1" # Generate auto complition
color-print = "0.3.6" # To color example help
encoding_rs_io = "0.1.7"
indexmap = { workspace = true }
jwalk = { workspace = true } # To enumarate json class files
parse-display = { workspace = true } # Display derive
snafu = { workspace = true } # Define all error patterns(with backtrace)
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"

# workspace members
havok_classes = { workspace = true, features = ["ignore_duplicates"] }
serde_hkx = { path = "../../serde_hkx", features = ["tracing"] }

[build-dependencies]
winres = "0.1.12" # Meta information can be added to the exe.


[features]
default = ["color"]
color = []
