[package]
name = "hkxc"
description = "Havok Behavior (De)Serialization CLI(for ver. hk_2010.2.0-r1)"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] } # For CLI
clap_complete_command = "0.6.1" # Generate auto complition
color-print = { workspace = true } # To color example help
parse-display = { workspace = true } # Display derive
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "time",
  "rt-multi-thread",
] }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"

# workspace members
serde_hkx_features = { workspace = true, features = ["clap", "tracing"] }

[build-dependencies]
winres = "0.1.12" # Meta information can be added to the exe.


[features]
default = ["color"]
color = []


[lints]
workspace = true
