[package]
name = "hkxc"
description = "Havok Behavior (De)Serialization CLI(for ver. hk_2010.2.0-r1)"
version.workspace = true
categories = ["development-tools"]

authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true } # For CLI
clap_complete_command = "0.6.1" # Generate auto complition
color-print = { workspace = true } # To color example help
indicatif = { version = "0.17.9", features = ["rayon"] } # CLI progress bar
parse-display = { workspace = true } # Display derive
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "time",
  "rt-multi-thread",
] }
tracing = { workspace = true }
tracing-subscriber = "0.3.18"

# workspace members
serde_hkx_features = { workspace = true, features = ["clap", "tracing"] }

[build-dependencies]
ico = "0.4.0"     # ICO file creation
resvg = "0.45.1"  # SVG rendering
winres = "0.1.12" # Meta information can be added to the exe.


[features]
default = ["color"]

# ANSI color
color = []

# Extra output format(json, toml, yaml)
extra_fmt = ["serde_hkx_features/extra_fmt"]

[lints]
workspace = true
