[package]
name = "havok_class"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.4"                          # To generate flags type
educe = "0.6.0"
havok_serde = { path = "../havok_serde" }
havok_types = { path = "../havok_types" }
num-derive = "0.4"
num-traits = "0.2"
