[package]
name = "havok_classes"
description = "Havok Behavior generated classes(ver. hk_2010.2.0-r1)"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = { workspace = true } # To generate flags type
educe = { workspace = true, features = [
  "full",
] } # To support the `Default` trait implementation for huge fixed-size arrays.
num-derive = { workspace = true } # To serialize Enum & Flags
num-traits = { workspace = true } # To serialize Enum & Flags
schemars = { workspace = true, features = ["indexmap2"], optional = true }
serde = { workspace = true, features = [
  "derive",
], optional = true } # Implement (De)Serializer
serde_with = { workspace = true, optional = true } # Serde utility

# workspace members
havok_serde = { workspace = true }
havok_types = { workspace = true }
havok_types_derive = { workspace = true }


[features]
# Derive `serde`
serde = ["havok_types/serde", "bitflags/serde", "dep:serde", "dep:serde_with"]

# Strictly check for the presence of values.
# For example, forbidden missing fields, duplicate fields, an error is made. (but not the original behavior).
strict = []

# When reading partial XML in Nemesis, you may want to ignore duplicates because the original comes a second time. This is used in that case.
ignore_duplicates = []

# Derive json schema generator
json_schema = ["serde", "havok_types/json_schema", "dep:schemars"]
