[package]
name = "havok_serde"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
havok_types = { workspace = true }
indexmap = { workspace = true, optional = true }

[features]
default = ["std"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = []

# Provide impls for types in the Rust core allocation and collections library
# including Vec<T>, and Cow<T>. This is a subset of std but may
# be enabled without depending on all of std.
alloc = []

# impl Serialize/Deserialize for IndexMap.
# Need indexmap
indexmap = ["dep:indexmap"]
