[package]
name = "havok_serde_derive"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "havok_serde_derive"
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = [
  "clone-impls",
  "derive",
  "parsing",
  "printing",
  "proc-macro",
] }
