[package]
name = "havok_types"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.4.1"
parse-display = "0.9.0" # Display derive
parse_int = { version = "0.6" }
serde = { version = "1.0", features = [
  "derive",
], optional = true } # Implement (De)Serializer
serde_with = { version = "3.8.1", optional = true }
static_assertions = "1.1.0"

[dev-dependencies]
pretty_assertions = "1.4"            # To make diffs color and easy to read on test
serde_json = { version = "1.0.116" } # To read and write Json files

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
