[package]
name = "havok_types_derive"
description = "Havok Behavior basic types automatically method generater"
version.workspace = true

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parse_int = { workspace = true } # proc macro internal use

[dependencies.havok_types_derive_proc_macros]
path = "./src/proc_macros"
