[package]
name = "inheritance_tree_gen"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
class_generator = { path = "../class_generator" }
jwalk = { version = "0.8" }                       # To enumarate json class files
serde_json = { version = "1.0.116" }              # To read and write Json files

[dev-dependencies]
pretty_assertions = "1.4" # To make diffs color and easy to read on test
