[package]
name = "inheritance_tree_gen"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
class_generator = { path = "../class_generator" }
jwalk = { workspace = true }                      # To enumerate json class files
serde_json = { workspace = true }                 # To read and write Json files

[dev-dependencies]
pretty_assertions = { workspace = true } # To make diffs color and easy to read on test
